[gd_scene load_steps=6 format=3 uid="uid://nco2gd3ylcrw"]

[ext_resource type="Script" path="res://scripts/game/Game.gd" id="1_8b1w1"]
[ext_resource type="Texture2D" uid="uid://rcehjeafqa81" path="res://prefabs/user/border.png" id="2_uviet"]
[ext_resource type="FontFile" uid="uid://b5o12budjhyv7" path="res://fonts/font.ttf" id="3_f6rql"]
[ext_resource type="Script" path="res://scripts/game/managers/NoteManager.gd" id="4_567p8"]

[sub_resource type="Environment" id="Environment_2pdyn"]
background_mode = 1

[node name="Game" type="Node3D"]
script = ExtResource("1_8b1w1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, 8.74228e-08, 1, -8.74228e-08, -7.64274e-15, -8.74228e-08, -1, 0, 0, -3.5)
fov = 70.0

[node name="HUD" type="Node3D" parent="."]

[node name="Border" type="Sprite3D" parent="HUD"]
pixel_size = 0.0025
texture = ExtResource("2_uviet")

[node name="TimeIntoMap" type="Label3D" parent="HUD"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.09944e-06, -1.60594, 0.000213027)
pixel_size = 0.0001
double_sided = false
text = "0:00/0:00
"
font = ExtResource("3_f6rql")
font_size = 1500

[node name="MapName" type="Label3D" parent="HUD"]
transform = Transform3D(-1, -0.0003963, 0.000613279, -0.000238369, 0.971063, 0.238822, -0.000690175, 0.238822, -0.971063, -3.09944e-06, -1.77697, 0.000213027)
pixel_size = 0.0001
double_sided = false
text = "Billy Sick - Balls In Your Jaws"
font = ExtResource("3_f6rql")
font_size = 1500

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2pdyn")

[node name="NoteSpawner" type="Node3D" parent="."]
script = ExtResource("4_567p8")

[node name="MusicStream" type="AudioStreamPlayer3D" parent="."]
